# gocardless-bankaccountdata-rs

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: build.yml
examples/: institutions.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: Account.md  AccountAccessForbidden.md  AccountNotFoundError.md  AccountStateError.md  AccountStatusEnum.md  AccountsApi.md  AddressCountryEnum.md  AgreementFieldErrors.md  AgreementNotFoundErrors.md  AgreementsApi.md  AuthenticationFailed.md  ConnectionError.md  CountryEnum.md  CreditorAccount.md  CreditorAccountWrite.md  CreditorAccountWriteRequest.md  DateRangeError.md  DebtorAccountWrite.md  DebtorAccountWriteRequest.md  EndUserAgreement.md  EndUserAgreementRequest.md  EnduserAcceptanceDetailsRequest.md  EnrichedBankDataInviteOnlyApi.md  EuaAccepted.md  ExecutionRuleEnum.md  FieldsRequired.md  FrequencyEnum.md  InstitutionsApi.md  InstructedAmount.md  InstructedAmountRequest.md  Integration.md  IntegrationRetrieve.md  InvalidId.md  InvalidToken.md  IpAccessDenied.md  JwtObtainPairRequest.md  JwtRefreshRequest.md  MinimumRequiredFields.md  NordigenRateLimitExceeded.md  NotFoundError.md  (+38 more)
openapi/src/apis/: accounts_api.rs  agreements_api.rs  configuration.rs  enriched_bank_data_invite_only_api.rs  institutions_api.rs  mod.rs  payments_api.rs  requisitions_api.rs  token_api.rs
openapi/src/models/: account.rs  account_access_forbidden.rs  account_not_found_error.rs  account_state_error.rs  account_status_enum.rs  address_country_enum.rs  agreement_field_errors.rs  (+66 more)
src/: lib.rs
